Formatting / typo / trivial change (20250320170015)

--- a/2025/03-dagstat/beamerthemeBIPS.sty
+++ b/2025/03-dagstat/beamerthemeBIPS.sty
@@ -55,7 +55,8 @@
 \setbeamerfont{framesubtitle}{size=\large, series=\bfseries}
 \setbeamerfont{block title}{series=\bfseries}
 \setbeamerfont{institute}{size=\small}
-\setbeamerfont{author}{size=\small}
+% \setbeamerfont{author}{size=\small}
+\setbeamerfont{author}{size=\normalsize}
 \setbeamerfont{date}{size=\small}
 
 %\setbeamerfont{normal text}{size=\LARGE}
@@ -95,7 +96,7 @@
 	% add the line
 	\vspace*{-.5cm}%
 	\begin{tikzpicture}
-		\draw[BIPSTextGray,path fading=east] (-1,1.2) -- (8.5,1.2);
+		\draw[BIPSTextGray,path fading=east] (-1,1.2) -- (9.5,1.2);
 	\end{tikzpicture}
 }
 
